fix: close button on mobile

--- a/styles/components/Selected.module.css
+++ b/styles/components/Selected.module.css
@@ -13,6 +13,14 @@
     justify-content    : space-between;
 }
 
+.close {
+    height  : 24px;
+    color   : #F5F4F0F0;
+    position: absolute;
+    top     : 10px;
+    right   : 10px;
+}
+
 @media (max-width: 600px) {
     .box {
         height   : 240px;
@@ -20,13 +28,6 @@
         transform: translateX(-50%);
         bottom   : 70px;
     }
-}
-
-.close {
-    height: 24px;
-    color : #F5F4F0F0;
-    margin: 10px 10px auto auto;
-    filter: drop-shadow(1px 1px 12px #140b05);
 }
 
 .close:hover {
